Prevent line break in size between value and unit

--- a/styles.css
+++ b/styles.css
@@ -92,6 +92,10 @@ main {
     font-weight: 600;
 }
 
+.fruit-size-value {
+    white-space: nowrap;
+}
+
 .fixed-date {
     color: #555;
 }
